# kigiri

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.txt  if-checklist.md  justfile
.claude/commands/: git-commit.md
.github/workflows/: build-docker-image.yml  rust-ci.yml
backend_llvm/: Cargo.toml
backend_llvm/src/: ir_to_llvm.rs  lib.rs  main.rs
backend_llvm/src/snapshots/: backend_llvm__ir_to_llvm__tests__if_elseif_else.snap  backend_llvm__ir_to_llvm__tests__if_statement_simple.snap  backend_llvm__ir_to_llvm__tests__if_statement_variable_assignment.snap  backend_llvm__ir_to_llvm__tests__if_statement_with_else.snap  backend_llvm__ir_to_llvm__tests__nested_if_statements.snap
backend_llvm/tests/: generated_llvm_semantic_test.rs
build-docker-image/: Dockerfile
build-docker-image-2/: Dockerfile
build-docker-image-3/: Dockerfile
codegen/: Cargo.toml
codegen/src/: error.rs  ir.rs  ir2.rs  ir_builder.rs  ir_builder2.rs  lib.rs  main.rs
docs/plans/: break-continue-implementation.md  extensible-type-system.md  improvement-plan.md  unsigned-integers.md  while.md
kigiri_memory/: Cargo.toml
kigiri_memory/src/: lib.rs  symbols.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  grammar.pest  grammar.rs  lib.rs  memory.rs  parsed_ast.rs  parser.rs  symbols.rs
semantic_analysis/: Cargo.toml
semantic_analysis/src/: ast_top_level_declaration.rs  ast_typed.rs  lib.rs  phase_return_path_analyzer.rs  phase_top_level_declaration_collector.rs  phase_type_resolver.rs  semantic_analyzer.rs  type_resolver.rs  typed_ast.rs  types.rs
type_engine/src/: lib.rs  (+3 more)
