[workspace]
members = ["parser", "semantic_analysis", "codegen", "backend_llvm"]
resolver = "3"

[workspace.dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
pest = "2.8.0"
pest_derive = "2.8.0"
string-interner = "0.19.0"
bumpalo = "3.17.0"
thiserror = "2.0.12"
insta = "1.43.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
