[package]
name = "backend_llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { workspace = true }
thiserror = { workspace = true }
parser = { path = "../parser" }
semantic_analysis = { path = "../semantic_analysis" }
codegen = { path = "../codegen" }

[dev-dependencies]
insta = { workspace = true }
